--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-light">
       <div class="container">
-        <a class="navbar-brand navbar-logo" href="/">Hiromi Tanimura</a>
+        <a class="navbar-brand navbar-logo" href="/" title="Homepage">Hiromi Tanimura</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,13 +42,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About Hiromi Tanimura">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="Contact Hiromi Tanimura">Contact me</a>
             </li>
           </ul>
         </div>
@@ -58,8 +58,8 @@
     <h1 class="text-center">Hiromi Tanimura</h1>
     <h3 class="text-center">🇿🇼🇯🇵 Front-end developer, based in Japan</h3>
     <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link" title="How to contact me">Contact me</a>
-      <a href="/about.html" class="about-link" title="Learn more about me">About me</a>
+      <a href="/about.html#contact" class="contact-link" title="Contact Hiromi Tanimura">Contact me</a>
+      <a href="/about.html" class="about-link" title="About Hiromi Tanimura">About me</a>
     </div>
 
     <div class="container">
