--- a/about.html
+++ b/about.html
@@ -27,9 +27,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-light">
       <div class="container">
-        <a class="navbar-brand navbar-logo" href="/index.html"
-          >Hiromi Tanimura</a
-        >
+        <a class="navbar-brand navbar-logo" href="/" title="Homepage">Hiromi Tanimura</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,19 +42,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About me</a>
+              <a class="nav-link  active" href="/about.html" title="About Hiromi Tanimura">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="Contact Hiromi Tanimura">Contact me</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Harare, Zimbabwe</h3>
     <p class="mt-2 text-center">
