Improved website responsiveness

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </nav>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Harare, Zimbabwe</h3>
-    <p class="mt-2 text-center">
+    <p class="mt-2 text-center ms-4 me-4">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
       provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
       veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
@@ -69,21 +69,21 @@
           <img
             src="/images/yoga.png"
             alt="yoga website"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/weather.png"
             alt="weather application"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/yogurt.png"
             alt="yogurt website"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
           />
         </div>
       </div>
