--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="/images/yoga.png" class="img-fluid" alt="yoga application preview" />
+          <img src="/images/yoga.png" class="img-fluid d-none d-sm-block" alt="yoga application preview" />
         </div>
         <div class="col-md-6">
           <h2>Yoga App</h2>
@@ -76,7 +76,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-4">
-            <a href="#" class="button-links">Launch Yoga App</a>
+            <a href="#" class="button-links" title="Yoga project">Launch Yoga App</a>
           </div>
         </div>
       </div>
@@ -91,21 +91,21 @@
             explicabo eum dolore.
           </p>
           <div class="mt-4 mb-5">
-            <a href="#" class="button-links mb-5">Launch Weather App</a>
+            <a href="#" class="button-links mb-5" title="Weather project">Launch Weather App</a>
           </div>
         </div>
         <div class="col-md-6">
           <img
             src="/images/weather.png"
-            class="img-fluid"
+            class="img-fluid d-none d-sm-block"
             alt="weather application preview"
           />
         </div>
       </div>
 
-      <div class="row mt-5">
+      <div class="row mt-4">
         <div class="col-md-6">
-          <img src="/images/yogurt.png" class="img-fluid" alt="yogurt application preview" />
+          <img src="/images/yogurt.png" class="img-fluid d-none d-sm-block" alt="yogurt application preview" />
         </div>
         <div class="col-md-6">
           <h2>Yogurt App</h2>
@@ -116,7 +116,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-4">
-            <a href="#" class="button-links">Launch Yogurt App</a>
+            <a href="#" class="button-links" title="Yogurt website project">Launch Yogurt App</a>
           </div>
         </div>
       </div>
